# 15418-project

./: .gitignore  CMakeLists.txt  README.md  run.sh
bench/: CMakeLists.txt  cuda_bench.cpp  ispc_bench.cpp  openmp_bench.cpp  seq_bench.cpp  thread_bench.cpp  warmup.cu
cuda-src/: CMakeLists.txt  main.cpp
cuda-src/cuda/: cudaOperator.cu  cudaOperator.h
cuda-src/include/: lstm.h  tanh.h
cudasrc/: gru.cpp
cudasrc/include/: device.h  sigmoid.h
include/: gru.h  lstm.h  matrix.h  sigmoid.h  tanh.h
lib/benchmark/: .gitignore
src/: gru.cpp  lstm.cpp  main.cpp  matrix.cpp  sigmoid.cpp  tanh.cpp
src-cuda/: CMakeLists.txt  cudaOperator.cu  cuda_operator.cu  gru.cpp  gru.cu  main.cpp  matrix.cpp  matrix.cu  sigmoid.cpp  sigmoid.cu  tanh.cpp  tanh.cu
src-cuda/cuda/: cudaOperator.cu  cudaOperator.h
src-cuda/include/: cudaOperator.cu  cudaOperator.h  cuda_operator.h  gru_operator.h  matrix.h
src-ispc/: CMakeLists.txt  lstm.cpp  main.cpp  matrix.cpp  matrix.ispc  sigmoid.cpp  sigmoid.ispc  tanh.cpp  tanh.ispc  tasksys.cpp
src-ispc/include/: matrix.h
src-openmp/: CMakeLists.txt  lstm.cpp  matrix.cpp  sigmoid.cpp
src-seq/: CMakeLists.txt  gru.cpp  main.cpp  matrix.cpp  sigmoid.cpp  tanh.cpp
src-seq/include/: gru.h  matrix.h
src-thread/: CMakeLists.txt  matrix.cpp  sigmoid.cpp  tanh.cpp
src/include/: gru.h  lstm.h  matrix.h  sigmoid.h  tanh.h
